--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,12 @@
 
     <!-- App Info -->
     <string name="app_name">Yamba</string>
-    
+
     <!-- Menu Items -->
     <string name="action_settings">Settings</string>
+    <string name="action_tweet">Tweet</string>
+    <string name="action_refresh">Refresh</string>
+    <string name="action_purge">Purge</string>
 
     <!-- Status Activity -->
     <string name="button_tweet">Tweet</string>
@@ -16,5 +19,5 @@
     <string name="username_summary">Enter your username</string>
     <string name="password">Password</string>
     <string name="password_summary">Enter your password</string>
-    
+
 </resources>
